08-cicd/project-03/deployment/prod/deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-website
  namespace: prod
  labels:
    name: devops-website
    instance: devops-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: devops-website
    instance: devops-website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-website
  namespace: prod
  labels:
    name: devops-website
    instance: devops-website
spec:
  replicas: 3
  selector:
    matchLabels:
      name: devops-website
      instance: devops-website
  template:
    metadata:
      labels:
        name: devops-website
        instance: devops-website
    spec:
      containers:
        - name: devops-website
          image: '9350733512/app:latest'
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-website
  namespace: prod
  labels:
    name: devops-website
    instance: devops-website
spec:
  ingressClassName: nginx
  rules:
    - host: "app-prod.sudoix.ir"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: devops-website
                port:
                  number: 80
